swagger auth fixed
